fail_crate/tests/unexpected_after_pub_crate.rs
use inew::New;

#[derive(New)]
#[new(pub(crate =))]
struct A;

fn main() {}
